RESOLVED FIXED176461
REGRESSION (r221598): Legacy "round" and "bevel" options can no longer be used with the legacy CanvasRenderingContext2D setLineJoin operation
https://bugs.webkit.org/show_bug.cgi?id=176461
Summary REGRESSION (r221598): Legacy "round" and "bevel" options can no longer be use...
Sam Weinig
Reported 2017-09-06 08:53:40 PDT
REGRESSION (r221598): Legacy "round" and "bevel" options can no longer be used with the legacy CanvasRenderingContext2D setLineJoin operation
Attachments
Patch (14.98 KB, patch)
2017-09-06 09:48 PDT, Sam Weinig
no flags
Sam Weinig
Comment 1 2017-09-06 09:48:39 PDT
WebKit Commit Bot
Comment 2 2017-09-06 11:49:50 PDT
Comment on attachment 320030 [details] Patch Clearing flags on attachment: 320030 Committed r221689: <http://trac.webkit.org/changeset/221689>
WebKit Commit Bot
Comment 3 2017-09-06 11:49:52 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-09-27 12:44:46 PDT
Note You need to log in before you can comment on or make changes to this bug.