REGRESSION (r221598): Legacy "round" and "bevel" options can no longer be used with the legacy CanvasRenderingContext2D setLineJoin operation https://bugs.webkit.org/show_bug.cgi?id=176461

Patch by Sam Weinig <sam@webkit.org> on 2017-09-06
Reviewed by Alex Christensen.

Source/WebCore:

Tests: fast/canvas/canvas-strokePath-cap-join-legacy-functions-match-attribute.html
       fast/canvas/canvas-strokePath-cap-join-legacy.html

* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::setLineJoin):

    Fix silly typo, ifs -> else ifs.

LayoutTests:

Add tests showing that the legacy setLineJoin and setLineCap operations are correct
and match the corresponding standard attributes.

* fast/canvas/canvas-strokePath-cap-join-legacy-functions-match-attribute-expected.html: Added.
* fast/canvas/canvas-strokePath-cap-join-legacy-functions-match-attribute.html: Added.
* fast/canvas/canvas-strokePath-cap-join-legacy-expected.txt: Added.
* fast/canvas/canvas-strokePath-cap-join-legacy.html: Added.

Canonical link: https://commits.webkit.org/193050@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221689 268f45cc-cd09-0410-ab3c-d52691b4dbfc